# RHE-mc

./: CMakeLists.txt  LICENSE  README.md
example/: adr.txt  annot.txt  annot_git.txt  sample.annot.txt  sample.cov  small.cov  small.phen  small.pheno  small_git.bed  small_git.bim  test.out.txt  test.sh
include/: arguments.h  genotype.cpp  genotype.h  mailman.h
src/: RHEmc.cpp  dom_jack_stream.cpp  multi.phen.rhemc.cpp  rhemc_cov_ldsc_her_def.cpp  rhemc_dom.cpp  rhemc_ldsc_her_def_stream.cpp  rhemc_mem_eff.cpp
